# hello-cuda

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: main.cpp
src/cuda/: vecadd.cu  vecadd.cuh
